<resources>
    <string name="app_name">Food Basket</string>
    <string name="Total">" Total Products"</string>
    <string name="quantity">Quantity</string>
    <string name="enter">" Enter"</string>
    <string name="hint_name">Name</string>
    <string name="add">Add!!</string>
    <string name="open">Open!!</string>
    <string name="no_products">No products</string>
    <string name="save_update">SaveUpdate</string>
</resources>